--- a/main.html
+++ b/main.html
@@ -7,6 +7,9 @@
 </head>
 
 <body>
+		<div id="text">
+			<h4>"Welcome to the world of Web development"</h4>
+		</div>
 	<!-- the entire body must be written by student -->
 	
 
