--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 		<div id="text">
-			<h4>"Welcome to the world of Web development"</h4>
+			<h4>Welcome to the world of Web development</h4>
 		</div>
 	<!-- the entire body must be written by student -->
 	
